@@ -135,6 +135,7 @@ module Scheduler
         # (Only jobs know about this method of the scheduler)
 
         job_thread = Thread.current
+        job_thread['rufus_scheduler__trigger_thread'] = true
         @last_job_thread = job_thread
 
         begin
