@@ -2,6 +2,11 @@
 = rufus-scheduler CHANGELOG.txt
 
 
+== rufus-scheduler - 2.0.7    not yet released
+
+- Scheduler#trigger_threads, thanks Tim Uckun
+
+
 == rufus-scheduler - 2.0.6    released 2010/05/01
 
 - timeout jobs not outliving their parent job anymore, thanks Joel Wood
